CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2
CSIQ Gain: $ -2.16 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_TR_QP_DB8
CSIQ Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_TR_DB8
CSIQ Gain: $ 0.98 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_AV_DB8
CSIQ Gain: $ 1.44 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_AL_DB8
CSIQ Gain: $ -2.81 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_QP_DB8
CSIQ Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM_TR_DB8
CSIQ Gain: $ 0.98 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM_AV_DB8
CSIQ Gain: $ -2.81 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM_QP_DB8
CSIQ Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_IT_QL_DB8
CSIQ Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_IT_QP_DB8
CSIQ Gain: $ -0.11 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_TR_IR2
CSIQ Gain: $ -3.04 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_TR_QP
CSIQ Gain: $ -4.34 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_QP_IR2
CSIQ Gain: $ -0.57 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_TR
CSIQ Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_AV
CSIQ Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_AL
CSIQ Gain: $ -3.53 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM_TR
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM_AV
CSIQ Gain: $ -3.58 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_IT_QL
CSIQ Gain: $ -0.12 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_IT_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_AO_AC
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_IR2
CSIQ Gain: $ -0.57 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_TR
CSIQ Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_AV
CSIQ Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_AL
CSIQ Gain: $ -0.06 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_VI
CSIQ Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_LI
CSIQ Gain: $ -3.53 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM
CSIQ Gain: $ 0.86 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_SS
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_QL
CSIQ Gain: $ 1.39 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_DB8
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_AO
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_AC
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_IT
CSIQ Gain: $ -2.16 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_TR_QP_DB8
CSIQ Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_TR_DB8
CSIQ Gain: $ 0.98 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_AV_DB8
CSIQ Gain: $ 1.44 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_AL_DB8
CSIQ Gain: $ -2.81 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_QP_DB8
CSIQ Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM_TR_DB8
CSIQ Gain: $ 0.98 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM_AV_DB8
CSIQ Gain: $ -2.81 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM_QP_DB8
CSIQ Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_IT_QL_DB8
CSIQ Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_IT_QP_DB8
CSIQ Gain: $ -0.11 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_TR_IR2
CSIQ Gain: $ -3.04 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_TR_QP
CSIQ Gain: $ -4.34 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_QP_IR2
CSIQ Gain: $ -0.57 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_TR
CSIQ Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_AV
CSIQ Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_AL
CSIQ Gain: $ -3.53 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM_TR
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM_AV
CSIQ Gain: $ -3.58 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_IT_QL
CSIQ Gain: $ -0.12 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_IT_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_AO_AC
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_IR2
CSIQ Gain: $ -0.57 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_TR
CSIQ Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_AV
CSIQ Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_AL
CSIQ Gain: $ -0.06 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_VI
CSIQ Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_LI
CSIQ Gain: $ -3.53 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM
CSIQ Gain: $ 0.86 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_SS
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_QL
CSIQ Gain: $ 1.39 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_DB8
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_AO
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_AC
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_IT
CSIQ Gain: $ -2.16 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_TR_QP_DB8
CSIQ Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_TR_DB8
CSIQ Gain: $ 0.98 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_AV_DB8
CSIQ Gain: $ 1.44 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_AL_DB8
CSIQ Gain: $ -2.81 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_QP_DB8
CSIQ Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM_TR_DB8
CSIQ Gain: $ 0.98 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM_AV_DB8
CSIQ Gain: $ -2.81 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM_QP_DB8
CSIQ Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_IT_QL_DB8
CSIQ Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_IT_QP_DB8
CSIQ Gain: $ -0.11 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_TR_IR2
CSIQ Gain: $ -3.04 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_TR_QP
CSIQ Gain: $ -4.34 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_QP_IR2
CSIQ Gain: $ -0.57 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_TR
CSIQ Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_AV
CSIQ Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_AL
CSIQ Gain: $ -3.53 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM_TR
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM_AV
CSIQ Gain: $ -3.58 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_IT_QL
CSIQ Gain: $ -0.12 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_IT_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_AO_AC
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_IR2
CSIQ Gain: $ -0.57 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_TR
CSIQ Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_AV
CSIQ Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_AL
CSIQ Gain: $ -0.06 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_VI
CSIQ Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_LI
CSIQ Gain: $ -3.53 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM
CSIQ Gain: $ 0.86 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_SS
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_QL
CSIQ Gain: $ 1.39 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_DB8
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_AO
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_AC
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_IT
CSIQ Gain: $ -2.66 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR_QP_DB8
CSIQ Gain: $ -1.31 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_TR_DB8
CSIQ Gain: $ -0.07 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AV_DB8
CSIQ Gain: $ 1.06 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AL_DB8
CSIQ Gain: $ -0.84 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_QP_DB8
CSIQ Gain: $ -1.31 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_TR_DB8
CSIQ Gain: $ -0.07 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_AV_DB8
CSIQ Gain: $ -0.84 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_QP_DB8
CSIQ Gain: $ 1.35 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QL_DB8
CSIQ Gain: $ 0.06 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QP_DB8
CSIQ Gain: $ -1.09 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR_IR2
CSIQ Gain: $ -2.63 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR_QP
CSIQ Gain: $ -0.72 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QP_IR2
CSIQ Gain: $ -1.09 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_TR
CSIQ Gain: $ 0.15 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AV
CSIQ Gain: $ 1.28 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AL
CSIQ Gain: $ -0.72 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_QP
CSIQ Gain: $ -0.92 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_TR
CSIQ Gain: $ 0.32 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_AV
CSIQ Gain: $ -0.69 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_QP
CSIQ Gain: $ 0.12 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QL
CSIQ Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QP
CSIQ Gain: $ -30.41 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AO_AC
CSIQ Gain: $ 1.57 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV
CSIQ Gain: $ 1.57 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IR2
CSIQ Gain: $ -1.09 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR
CSIQ Gain: $ 0.15 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AV
CSIQ Gain: $ 1.28 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AL
CSIQ Gain: $ -0.41 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_VI
CSIQ Gain: $ 1.05 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_LI
CSIQ Gain: $ -0.72 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QP
CSIQ Gain: $ 1.74 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM
CSIQ Gain: $ 1.26 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_SS
CSIQ Gain: $ 1.57 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QL
CSIQ Gain: $ 1.35 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_DB8
CSIQ Gain: $ 1.57 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AO
CSIQ Gain: $ -30.41 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AC
CSIQ Gain: $ 0.12 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT
CSIQ Gain: $ 0.12 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT
CSIQ Gain: $ -2.16 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3
CSIQ Gain: $ -3.94 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_TR_QP_DB10
CSIQ Gain: $ -2.92 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_TR_DB10
CSIQ Gain: $ 0.5 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_AV_DB10
CSIQ Gain: $ -0.34 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_AL_DB10
CSIQ Gain: $ -4.27 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_QP_DB10
CSIQ Gain: $ -3.2 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_TR_DB10
CSIQ Gain: $ -0.83 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_AV_DB10
CSIQ Gain: $ -4.54 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_QP_DB10
CSIQ Gain: $ -1.28 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_IT_QL_DB10
CSIQ Gain: $ 0.13 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_IT_QP_DB10
CSIQ Gain: $ -1.45 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_TR_IR3
CSIQ Gain: $ -5.07 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_TR_QP
CSIQ Gain: $ -5.17 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_QP_IR3
CSIQ Gain: $ -1.65 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_TR
CSIQ Gain: $ 0.66 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_AV
CSIQ Gain: $ 3.19 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_AL
CSIQ Gain: $ -5.13 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_QP
CSIQ Gain: $ -5.15 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_TR
CSIQ Gain: $ 1.78 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_AV
CSIQ Gain: $ 1.78 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_AL
CSIQ Gain: $ -5.4 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_QP
CSIQ Gain: $ 0 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_IT_QL
CSIQ Gain: $ -0.18 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_IT_QP
CSIQ Gain: $ 1.54 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_AO_AC
CSIQ Gain: $ -0.42 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_QP_PM
CSIQ Gain: $ -1.86 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV
CSIQ Gain: $ -2.16 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_IR3
CSIQ Gain: $ -1.45 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_TR
CSIQ Gain: $ 0.66 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_AV
CSIQ Gain: $ 3.19 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_AL
CSIQ Gain: $ -3.19 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_VI
CSIQ Gain: $ 1.77 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_LI
CSIQ Gain: $ -5.3 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_QP
CSIQ Gain: $ -0.18 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM
CSIQ Gain: $ 0.42 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_SS
CSIQ Gain: $ -2.15 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_QL
CSIQ Gain: $ 0.95 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_DB10
CSIQ Gain: $ 0.38 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_AO
CSIQ Gain: $ -0.27 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_AC
CSIQ Gain: $ 0 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_IT
CSIQ Gain: $ -0.82 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_PM
CSIQ Gain: $ 1.51 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_TS
CSIQ Gain: $ -2.3 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TR_QP_DB10
CSIQ Gain: $ -1.06 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_TR_DB10
CSIQ Gain: $ 1.4 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_AV_DB10
CSIQ Gain: $ 0.98 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_AL_DB10
CSIQ Gain: $ -1.14 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_QP_DB10
CSIQ Gain: $ -1.55 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_TR_DB10
CSIQ Gain: $ 0.16 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_AV_DB10
CSIQ Gain: $ -1.24 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_QP_DB10
CSIQ Gain: $ -0.28 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT_QL_DB10
CSIQ Gain: $ 0.12 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT_QP_DB10
CSIQ Gain: $ -0.97 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TR_IR3
CSIQ Gain: $ -3.62 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TR_QP
CSIQ Gain: $ -3.12 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_QP_IR3
CSIQ Gain: $ -1.09 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_TR
CSIQ Gain: $ -1.14 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_AV
CSIQ Gain: $ 0.73 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_AL
CSIQ Gain: $ -1 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_QP
CSIQ Gain: $ -1.76 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_TR
CSIQ Gain: $ 2.9 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_AV
CSIQ Gain: $ 1.76 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_AL
CSIQ Gain: $ -1.65 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_QP
CSIQ Gain: $ 1.34 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT_QL
CSIQ Gain: $ -0.13 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT_QP
CSIQ Gain: $ 2.59 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AO_AC
CSIQ Gain: $ -1.42 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_QP_PM
CSIQ Gain: $ 2.59 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV
CSIQ Gain: $ -1.24 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IR3
CSIQ Gain: $ -1.09 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TR
CSIQ Gain: $ 0.37 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AV
CSIQ Gain: $ 0.73 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AL
CSIQ Gain: $ 1.02 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_VI
CSIQ Gain: $ 0.82 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_LI
CSIQ Gain: $ -1.28 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_QP
CSIQ Gain: $ 2.37 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM
CSIQ Gain: $ 2.77 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_SS
CSIQ Gain: $ 2.59 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_QL
CSIQ Gain: $ 1.13 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_DB10
CSIQ Gain: $ 2.59 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AO
CSIQ Gain: $ 2.59 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AC
CSIQ Gain: $ 1.34 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT
CSIQ Gain: $ 1.96 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_PM
CSIQ Gain: $ 1.52 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TS
CSIQ Gain: $ -1.04 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_TR_QP_DB10
CSIQ Gain: $ -0.46 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_TR_DB10
CSIQ Gain: $ 0.48 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_AV_DB10
CSIQ Gain: $ 0.49 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_AL_DB10
CSIQ Gain: $ -1.11 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_QP_DB10
CSIQ Gain: $ -3.11 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_TR_DB10
CSIQ Gain: $ -0.72 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_AV_DB10
CSIQ Gain: $ -2.48 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_QP_DB10
CSIQ Gain: $ 1.38 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_IT_QL_DB10
CSIQ Gain: $ 0.08 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_IT_QP_DB10
CSIQ Gain: $ -0.96 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_TR_IR3
CSIQ Gain: $ -2.09 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_TR_QP
CSIQ Gain: $ -1.95 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_QP_IR3
CSIQ Gain: $ 0.04 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_TR
CSIQ Gain: $ 0.46 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_AV
CSIQ Gain: $ 1.71 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_AL
CSIQ Gain: $ -2.12 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_QP
CSIQ Gain: $ -3.15 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_TR
CSIQ Gain: $ 1.6 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_AV
CSIQ Gain: $ 1.93 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_AL
CSIQ Gain: $ -3.49 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_QP
CSIQ Gain: $ 0.32 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_IT_QL
CSIQ Gain: $ 0.03 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_IT_QP
CSIQ Gain: $ -3.98 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_AO_AC
CSIQ Gain: $ -0.32 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_QP_PM
CSIQ Gain: $ 1.24 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV
CSIQ Gain: $ 0.24 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_IR3
CSIQ Gain: $ 0.26 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_TR
CSIQ Gain: $ 0.46 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_AV
CSIQ Gain: $ 1.73 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_AL
CSIQ Gain: $ -1.99 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_VI
CSIQ Gain: $ 0.61 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_LI
CSIQ Gain: $ -1.07 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_QP
CSIQ Gain: $ 0.32 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM
CSIQ Gain: $ 1.56 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_SS
CSIQ Gain: $ 1.46 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_QL
CSIQ Gain: $ 0.82 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_DB10
CSIQ Gain: $ 1.68 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_AO
CSIQ Gain: $ -1.46 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_AC
CSIQ Gain: $ 0.32 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_IT
CSIQ Gain: $ -0.95 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_PM
CSIQ Gain: $ 1.63 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_TS
CSIQ Gain: $ -3.33 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR_QP_DB8
CSIQ Gain: $ -1.64 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_TR_DB8
CSIQ Gain: $ 0.1 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AV_DB8
CSIQ Gain: $ 1.05 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AL_DB8
CSIQ Gain: $ -1.16 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_QP_DB8
CSIQ Gain: $ -1.98 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_TR_DB8
CSIQ Gain: $ -0.53 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_AV_DB8
CSIQ Gain: $ -1.25 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_QP_DB8
CSIQ Gain: $ -0.11 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QL_DB8
CSIQ Gain: $ 0.17 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QP_DB8
CSIQ Gain: $ -0.27 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR_IR2
CSIQ Gain: $ -1.21 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR_QP
CSIQ Gain: $ -0.84 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QP_IR2
CSIQ Gain: $ -0.88 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_TR
CSIQ Gain: $ 1.09 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AV
CSIQ Gain: $ 2.19 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AL
CSIQ Gain: $ -0.84 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_QP
CSIQ Gain: $ -0.99 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_TR
CSIQ Gain: $ 0.46 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_AV
CSIQ Gain: $ 1.41 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_AL
CSIQ Gain: $ 0.9 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_QP
CSIQ Gain: $ 0.76 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QL
CSIQ Gain: $ 0.2 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QP
CSIQ Gain: $ -57.41 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AO_AC
CSIQ Gain: $ -1.66 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QP_PM
CSIQ Gain: $ 2.52 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV
CSIQ Gain: $ 2.52 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IR2
CSIQ Gain: $ -0.27 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR
CSIQ Gain: $ 1.09 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AV
CSIQ Gain: $ 2.7 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AL
CSIQ Gain: $ 0.27 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_VI
CSIQ Gain: $ 1.88 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_LI
CSIQ Gain: $ -0.84 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QP
CSIQ Gain: $ 2.56 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM
CSIQ Gain: $ 2.32 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_SS
CSIQ Gain: $ 2.52 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QL
CSIQ Gain: $ 1.45 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_DB8
CSIQ Gain: $ 2.52 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AO
CSIQ Gain: $ -57.41 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AC
CSIQ Gain: $ 0.76 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT
CSIQ Gain: $ 1.77 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_PM
CSIQ Gain: $ 1.76 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TS
CSIQ Gain: $ 1.76 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TS
CSIQ Gain: $ 0.08 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3
CSIQ Gain: $ -3.94 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_TR_QP_DB10
CSIQ Gain: $ -2.92 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_TR_DB10
CSIQ Gain: $ 0.5 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_AV_DB10
CSIQ Gain: $ -0.34 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_AL_DB10
CSIQ Gain: $ -4.27 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_QP_DB10
CSIQ Gain: $ -3.2 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_TR_DB10
CSIQ Gain: $ -0.83 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_AV_DB10
CSIQ Gain: $ -4.54 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_QP_DB10
CSIQ Gain: $ -1.28 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_IT_QL_DB10
CSIQ Gain: $ -0.69 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_IT_QP_DB10
CSIQ Gain: $ -1.45 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_TR_IR3
CSIQ Gain: $ -4.5 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_TR_QP
CSIQ Gain: $ -5.3 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_QP_IR3
CSIQ Gain: $ -1.65 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_TR
CSIQ Gain: $ 0.66 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_AV
CSIQ Gain: $ 3.19 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_AL
CSIQ Gain: $ -5.13 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV_QP
CSIQ Gain: $ -2.01 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_TR
CSIQ Gain: $ 1.78 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_AV
CSIQ Gain: $ 1.78 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_AL
CSIQ Gain: $ -5.4 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM_QP
CSIQ Gain: $ -1.07 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_IT_QL
CSIQ Gain: $ 0.66 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_IT_QP
CSIQ Gain: $ 1.54 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_AO_AC
CSIQ Gain: $ -0.1 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_QP_PM
CSIQ Gain: $ -1.86 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_RV
CSIQ Gain: $ -2.16 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_IR3
CSIQ Gain: $ -1.45 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_TR
CSIQ Gain: $ 0.66 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_AV
CSIQ Gain: $ 3.19 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_AL
CSIQ Gain: $ -3.19 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_VI
CSIQ Gain: $ 1.77 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_LI
CSIQ Gain: $ -5.3 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_QP
CSIQ Gain: $ -0.18 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_HM
CSIQ Gain: $ 0.42 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_SS
CSIQ Gain: $ -2.15 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_QL
CSIQ Gain: $ 1.03 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_DB10
CSIQ Gain: $ 0.38 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_AO
CSIQ Gain: $ -0.27 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_AC
CSIQ Gain: $ -0.1 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_IT
CSIQ Gain: $ -0.82 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_PM
CSIQ Gain: $ 1.51 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_TS
CSIQ Gain: $ -2.3 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TR_QP_DB10
CSIQ Gain: $ -1.06 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_TR_DB10
CSIQ Gain: $ 1.4 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_AV_DB10
CSIQ Gain: $ 0.98 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_AL_DB10
CSIQ Gain: $ -0.71 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_QP_DB10
CSIQ Gain: $ -1.55 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_TR_DB10
CSIQ Gain: $ 1.37 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_AV_DB10
CSIQ Gain: $ -1.24 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_QP_DB10
CSIQ Gain: $ -0.28 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT_QL_DB10
CSIQ Gain: $ -0.08 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT_QP_DB10
CSIQ Gain: $ -2.94 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TR_IR3
CSIQ Gain: $ -3.62 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TR_QP
CSIQ Gain: $ -4.74 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_QP_IR3
CSIQ Gain: $ -1.09 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_TR
CSIQ Gain: $ 0.37 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_AV
CSIQ Gain: $ 0.73 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_AL
CSIQ Gain: $ -1 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV_QP
CSIQ Gain: $ -1.76 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_TR
CSIQ Gain: $ 2.9 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_AV
CSIQ Gain: $ 1.76 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_AL
CSIQ Gain: $ -1.65 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM_QP
CSIQ Gain: $ 1.31 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT_QL
CSIQ Gain: $ -0.29 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT_QP
CSIQ Gain: $ 2.59 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AO_AC
CSIQ Gain: $ -1.42 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_QP_PM
CSIQ Gain: $ 2.59 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_RV
CSIQ Gain: $ -1.24 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IR3
CSIQ Gain: $ -1.09 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TR
CSIQ Gain: $ 0.37 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AV
CSIQ Gain: $ 0.73 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AL
CSIQ Gain: $ 1.02 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_VI
CSIQ Gain: $ 0.82 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_LI
CSIQ Gain: $ -1.28 Win %: 0 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_QP
CSIQ Gain: $ 2.37 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_HM
CSIQ Gain: $ 2.77 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_SS
CSIQ Gain: $ 2.59 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_QL
CSIQ Gain: $ 1.13 Win %: 50.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_DB10
CSIQ Gain: $ 2.59 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AO
CSIQ Gain: $ 2.59 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_AC
CSIQ Gain: $ 1.31 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_IT
CSIQ Gain: $ 1.96 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_PM
CSIQ Gain: $ 1.52 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TS
CSIQ Gain: $ -1.04 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_TR_QP_DB10
CSIQ Gain: $ -0.46 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_TR_DB10
CSIQ Gain: $ 0.48 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_AV_DB10
CSIQ Gain: $ 0.49 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_AL_DB10
CSIQ Gain: $ -1.11 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_QP_DB10
CSIQ Gain: $ -3.11 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_TR_DB10
CSIQ Gain: $ -0.72 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_AV_DB10
CSIQ Gain: $ -2.48 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_QP_DB10
CSIQ Gain: $ 0.12 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_IT_QL_DB10
CSIQ Gain: $ -0.12 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_IT_QP_DB10
CSIQ Gain: $ -0.96 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_TR_IR3
CSIQ Gain: $ -2.09 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_TR_QP
CSIQ Gain: $ -1.95 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_QP_IR3
CSIQ Gain: $ 0.04 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_TR
CSIQ Gain: $ 0.46 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_AV
CSIQ Gain: $ 1.71 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_AL
CSIQ Gain: $ -2.12 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV_QP
CSIQ Gain: $ -3.15 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_TR
CSIQ Gain: $ 1.6 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_AV
CSIQ Gain: $ 1.93 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_AL
CSIQ Gain: $ -3.49 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM_QP
CSIQ Gain: $ 0.22 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_IT_QL
CSIQ Gain: $ -0.04 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_IT_QP
CSIQ Gain: $ -3.98 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_AO_AC
CSIQ Gain: $ -0.32 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_QP_PM
CSIQ Gain: $ 1.24 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_RV
CSIQ Gain: $ 0.24 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_IR3
CSIQ Gain: $ 0.26 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_TR
CSIQ Gain: $ -1.15 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_AV
CSIQ Gain: $ 1.73 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_AL
CSIQ Gain: $ -2.53 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_VI
CSIQ Gain: $ 0.61 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_LI
CSIQ Gain: $ -1.07 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_QP
CSIQ Gain: $ 0.32 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_HM
CSIQ Gain: $ 1.56 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_SS
CSIQ Gain: $ 1.46 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_QL
CSIQ Gain: $ 0.82 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_DB10
CSIQ Gain: $ 1.68 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_AO
CSIQ Gain: $ -1.46 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_AC
CSIQ Gain: $ 0.22 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_IT
CSIQ Gain: $ -0.32 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_PM
CSIQ Gain: $ 1.63 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_TS
CSIQ Gain: $ -3.33 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR_QP_DB8
CSIQ Gain: $ -1.64 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_TR_DB8
CSIQ Gain: $ 0.1 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AV_DB8
CSIQ Gain: $ 2.19 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AL_DB8
CSIQ Gain: $ -1.16 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_QP_DB8
CSIQ Gain: $ -1.98 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_TR_DB8
CSIQ Gain: $ -0.53 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_AV_DB8
CSIQ Gain: $ -1.25 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_QP_DB8
CSIQ Gain: $ 0.03 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QL_DB8
CSIQ Gain: $ 0.04 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QP_DB8
CSIQ Gain: $ -0.27 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR_IR2
CSIQ Gain: $ -3.15 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR_QP
CSIQ Gain: $ -0.84 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QP_IR2
CSIQ Gain: $ -0.27 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_TR
CSIQ Gain: $ 1.09 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AV
CSIQ Gain: $ 2.19 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AL
CSIQ Gain: $ -0.84 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_QP
CSIQ Gain: $ -0.99 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_TR
CSIQ Gain: $ 0.46 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_AV
CSIQ Gain: $ 1.41 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_AL
CSIQ Gain: $ -0.9 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_QP
CSIQ Gain: $ 0.76 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QL
CSIQ Gain: $ 0.08 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QP
CSIQ Gain: $ -57.41 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AO_AC
CSIQ Gain: $ -1.66 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QP_PM
CSIQ Gain: $ 2.52 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV
CSIQ Gain: $ 2.52 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IR2
CSIQ Gain: $ -0.27 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR
CSIQ Gain: $ 1.09 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AV
CSIQ Gain: $ 2.19 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AL
CSIQ Gain: $ 0.27 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_VI
CSIQ Gain: $ 1.88 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_LI
CSIQ Gain: $ -0.84 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QP
CSIQ Gain: $ 2.56 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM
CSIQ Gain: $ 2.32 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_SS
CSIQ Gain: $ 2.52 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QL
CSIQ Gain: $ 1.45 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_DB8
CSIQ Gain: $ 2.52 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AO
CSIQ Gain: $ -57.41 Win %: 0 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AC
CSIQ Gain: $ 0.76 Win %: 50.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT
CSIQ Gain: $ 1.77 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_PM
CSIQ Gain: $ 1.76 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TS
CSIQ Gain: $ 1.76 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TS
CSIQ Gain: $ -2.16 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3
CSIQ Gain: $ -2.93 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB3_CS3_TS
CSIQ Gain: $ 1.52 Win %: 100.00 in 2 days with algo TB3_HI_QM_OB3_OS3_CB4_CS4_TS
CSIQ Gain: $ 1.63 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB3_OS3_CB4_CS4_TS
CSIQ Gain: $ 1.76 Win %: 100.00 in 2 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TS
